# passari-web-ui

./: CHANGELOG.md  README.md  pyproject.toml  requirements_dev.txt
docs/: installation.rst
src/passari_web_ui/: app.py  commands.py  config.py
src/passari_web_ui/static/js/: upload_csv.js
src/passari_web_ui/ui/: forms.py  validators.py  views.py
src/passari_web_ui/ui/templates/: macros.html
src/passari_web_ui/ui/templates/tabs/enqueue_objects/: enqueue_objects.html
tests/: conftest.py
tests/ui/: test_views.py
